# codes

./: CMakeLists.txt  apple_first.c  avgpool2d_gelu_quant.md  avgpool2d_gelu_quant.py  avgpool2d_gelu_quant_numba.py  bst.cpp  bstinsert.cpp  cond.cpp  dictionary.cpp  dist_train.py  firstsecondthird.cpp  fizzbuzz.cpp  fullyconnected.py  image_service.cpp  intimage.cpp  kernels.cu  linkedlist.py  magicleap.cpp  median2arrays.py  mostwater.py  others.py  palindrome.py  philosophers.py  plix.py  quicksort.c  quicksort.py  search_rotatedarray.py  siblingnodes.cpp  sudoku.cpp  swaptwo.py  test.cpp  tiktactoe.py  watermolecule.cpp  watermolecule.py  zerooddeven.cpp
